--- a/lib/fmessenger_web/templates/layout/app.html.eex
+++ b/lib/fmessenger_web/templates/layout/app.html.eex
@@ -12,14 +12,7 @@
 <body class=<%= @conn.path_info %>>
   <div class="container">
 
-    <!-- Add this header: -->
-    <header>
-
-      <%= link "", class: "logo", to: Routes.page_path(@conn, :index) %>
-
-      <%= link "Log in", to: Routes.page_path(@conn, :login) %>
-
-    </header>
+  <%= render FmessengerWeb.LayoutView, "header.html", assigns %>
 
    	<!-- The rest should be the same: -->
     <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
